// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flexbox & Grid - Gap gap-0 1`] = `
<View
  style={
    [
      {
        "gap": 0,
      },
    ]
  }
>
  <Text>
    A
  </Text>
  <Text>
    B
  </Text>
</View>
`;

exports[`Flexbox & Grid - Gap gap-0.5 1`] = `
<View
  style={
    [
      {
        "gap": 2,
      },
    ]
  }
>
  <Text>
    A
  </Text>
  <Text>
    B
  </Text>
</View>
`;

exports[`Flexbox & Grid - Gap gap-1 1`] = `
<View
  style={
    [
      {
        "gap": 4,
      },
    ]
  }
>
  <Text>
    A
  </Text>
  <Text>
    B
  </Text>
</View>
`;

exports[`Flexbox & Grid - Gap gap-px 1`] = `
<View
  style={
    [
      {
        "gap": 1,
      },
    ]
  }
>
  <Text>
    A
  </Text>
  <Text>
    B
  </Text>
</View>
`;

exports[`Flexbox & Grid - Gap gap-x-0 1`] = `
<View
  style={
    [
      {
        "columnGap": 0,
      },
    ]
  }
>
  <Text>
    A
  </Text>
  <Text>
    B
  </Text>
</View>
`;

exports[`Flexbox & Grid - Gap gap-x-0.5 1`] = `
<View
  style={
    [
      {
        "columnGap": 2,
      },
    ]
  }
>
  <Text>
    A
  </Text>
  <Text>
    B
  </Text>
</View>
`;

exports[`Flexbox & Grid - Gap gap-x-1 1`] = `
<View
  style={
    [
      {
        "columnGap": 4,
      },
    ]
  }
>
  <Text>
    A
  </Text>
  <Text>
    B
  </Text>
</View>
`;

exports[`Flexbox & Grid - Gap gap-x-px 1`] = `
<View
  style={
    [
      {
        "columnGap": 1,
      },
    ]
  }
>
  <Text>
    A
  </Text>
  <Text>
    B
  </Text>
</View>
`;

exports[`Flexbox & Grid - Gap gap-y-0 1`] = `
<View
  style={
    [
      {
        "rowGap": 0,
      },
    ]
  }
>
  <Text>
    A
  </Text>
  <Text>
    B
  </Text>
</View>
`;

exports[`Flexbox & Grid - Gap gap-y-0.5 1`] = `
<View
  style={
    [
      {
        "rowGap": 2,
      },
    ]
  }
>
  <Text>
    A
  </Text>
  <Text>
    B
  </Text>
</View>
`;

exports[`Flexbox & Grid - Gap gap-y-1 1`] = `
<View
  style={
    [
      {
        "rowGap": 4,
      },
    ]
  }
>
  <Text>
    A
  </Text>
  <Text>
    B
  </Text>
</View>
`;

exports[`Flexbox & Grid - Gap gap-y-px 1`] = `
<View
  style={
    [
      {
        "rowGap": 1,
      },
    ]
  }
>
  <Text>
    A
  </Text>
  <Text>
    B
  </Text>
</View>
`;
